<resources>
    <string name="app_name">duAnMauF_ASM</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_phieumuon">Quản lý phiếu mượn</string>
    <string name="title_loaisach">Quản lý loại sách</string>
    <string name="title_sach">Quản lý sách</string>
    <string name="title_thanhvien">Quản lý thành viên</string>

    <string name="title_top10Sach">Top 10 Sách</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_doanhthu">Doanh Thu</string>
    <string name="title_doimatkhau">Đổi mật khẩu</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>